--- a/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Stowe/160x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Stowe/160x600_Stowe.htm
@@ -14,6 +14,12 @@
           src: url('fonts/AvenirLTStd-Book.woff') format("woff");
       }
       .AvenirLTStdBook { font-family: AvenirLTStdBook; }
+
+      @font-face {
+          font-family: PlayfairDisplay-BoldItalic;
+          src: url('fonts/PlayfairDisplay-BoldItalic.woff') format("woff");
+      }
+      .PlayfairDisplay-BoldItalic { font-family: PlayfairDisplay-BoldItalic; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -46,7 +52,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text AvenirLTStdBook"
+      <div id="frameText1" class="text PlayfairDisplay-BoldItalic"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -58,7 +64,7 @@
           font-weight: bold;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text AvenirLTStdBook"
+      <div id="frameText2" class="text PlayfairDisplay-BoldItalic"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -70,7 +76,7 @@
           font-weight: bold;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text AvenirLTStdBook"
+      <div id="frameText3" class="text PlayfairDisplay-BoldItalic"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -99,6 +105,7 @@
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
       <div class="AvenirLTStdBook">AvenirLTStdBook</div>
+      <div class="PlayfairDisplay-BoldItalic">PlayfairDisplay-BoldItalic</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
